# RealtimeImageLocating

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  UT_cpipeline_indirect.h  UT_cpipeline_indirect_ref_only.h  UT_cpipeline_indirect_v2.h  UT_cpipeline_indirect_v3.h  UT_cpipeline_v1.h  UT_cpipeline_v2.h  UT_cpipeline_v3.h  c_api_test.cpp  c_testapp.cpp  test-v1.h  testapp.cpp
bindings/: readme.md
bindings/android-aar/proj/armap/: build.gradle  settings.gradle
bindings/android-aar/proj/armap/app/: build.gradle
bindings/android-aar/proj/armap/app/src/androidTest/java/com/intellif/armap/: ExampleInstrumentedTest.java
bindings/android-aar/proj/armap/app/src/main/: AndroidManifest.xml
bindings/android-aar/proj/armap/app/src/main/java/com/intellif/armap/: MainActivity.java
bindings/android-aar/proj/armap/app/src/main/res/layout/: activity_main.xml
bindings/android-aar/proj/armap/app/src/main/res/values/: strings.xml  themes.xml
bindings/android-aar/proj/armap/app/src/main/res/values-night/: themes.xml
bindings/android-aar/proj/armap/app/src/test/java/com/intellif/armap/: ExampleUnitTest.java
bindings/android-aar/proj/armap/gradle/wrapper/: gradle-wrapper.properties
bindings/android-aar/proj/armap/opencvsdk/: build.gradle
bindings/android-aar/proj/armap/opencvsdk/native/jni/: OpenCV.mk
bindings/android-aar/proj/armap/opencvsdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-minsizerel.cmake  OpenCVModules.cmake
bindings/android-aar/proj/armap/overmap/: build.gradle
bindings/android-aar/proj/armap/overmap/src/androidTest/java/com/intellif/overmap/: ExampleInstrumentedTest.java
bindings/android-aar/proj/armap/overmap/src/main/java/com/intellif/overmap/: CVCImreadModes.java  CVCMat.java  CvType.java  Image2Map.java  Image2MapIndirect.java
bindings/android-aar/proj/armap/overmap/src/test/java/com/intellif/overmap/: ExampleUnitTest.java
bindings/android-aar/scripts/: build-and-deploy-jnilibs.bat  build-jnilib.bat  build-opencv-android-static.bat  build-opencv-android.bat  copy-libs-to-android-project.bat  log.txt
bindings/c/: CMakeLists.txt  readme.md
bindings/c/include/: IMGRGLOC_Image2Map.h  IMGRGLOC_Image2MapIndirect.h  IMGRGLOC_Test.h  IMGRGLOC_master.h
bindings/c/src/: IMGRGLOC_Image2Map.cpp  IMGRGLOC_Image2MapIndirect.cpp  IMGRGLOC_Test.cpp
dev/linzhi/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ImageRegionSearch.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
dev/linzhi/apps/: c_api_test.vcxproj  c_api_test.vcxproj.filters  c_apptest.vcxproj  c_apptest.vcxproj.filters  testapp.vcxproj  testapp.vcxproj.filters
dev/linzhi/bindings/c/: imgregionloc_c.vcxproj  imgregionloc_c.vcxproj.filters
dev/linzhi/bindings/c/imgregionloc_c.dir/MinSizeRel/: objects.txt
dev/linzhi/bindings/c/imgregionloc_c.dir/RelWithDebInfo/: objects.txt
dev/linzhi/src/: imgregionloc.vcxproj  imgregionloc.vcxproj.filters
dev/linzhi/src/imgregionloc.dir/MinSizeRel/: objects.txt
dev/linzhi/src/imgregionloc.dir/RelWithDebInfo/: objects.txt
include/: FeaturePointList.h  ImageWithFeature.h  ORBFeatureExtractor.h  ORBRegionMatcher.h  RegionTransformer.h  SIFTFeatureExtractor.h  SIFTRegionMatcher.h  imgregionloc_master.h  testlib.h
include/pipeline/: Image2MapBase.h  Image2MapDirect.h  Image2MapIndirect.h
src/: CMakeLists.txt  FeaturePointList.cpp  ImageWithFeature.cpp  ORBFeatureExtractor.cpp  ORBRegionMatcher.cpp  RegionTransformer.cpp  SIFTFeatureExtractor.cpp  SIFTRegionMatcher.cpp  testlib.cpp
src/pipeline/: Image2MapBase.cpp  Image2MapDirect.cpp  Image2MapIndirect.cpp
